fixed servername overflowing

--- a/components/MatchResultBox/MatchResultBox.module.css
+++ b/components/MatchResultBox/MatchResultBox.module.css
@@ -26,6 +26,8 @@
     color:yellow;
     padding-top:5px;
     padding-bottom:5px;
+    height:24px;
+    overflow:hidden;
 }
 
 .gametype{
