--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -12,7 +12,7 @@
 
 .h1{
 	font-weight:300;
-	font-size:14px;
+	font-size:12px;
     margin-top:5px;
 	margin-bottom:5px;
 	text-align:center;
